// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can Move To 1`] = `
<div>
  <div
    class="ChessBoardSquare TestTheme ChessBoardSquareWhite"
  >
    <div
      class="MoveDot"
    />
  </div>
</div>
`;

exports[`Can capture 1`] = `
<div>
  <div
    class="ChessBoardSquare TestTheme ChessBoardSquareWhite"
  >
    <img
      alt="White Pawn"
      class="ChessPiece"
      src="/pieces/cburnett/White Pawn.svg"
    />
    <svg
      class="Overlay"
    >
      <circle
        cx="50%"
        cy="50%"
        fill="none"
        r="47.5%"
        stroke="black"
        stroke-width="2.5%"
      />
    </svg>
  </div>
</div>
`;

exports[`Empty Black Square 1`] = `
<div>
  <div
    class="ChessBoardSquare TestTheme ChessBoardSquareBlack"
  />
</div>
`;

exports[`Empty Square 1`] = `
<div>
  <div
    class="ChessBoardSquare TestTheme ChessBoardSquareWhite"
  />
</div>
`;

exports[`Highlighted in check 1`] = `
<div>
  <div
    class="ChessBoardSquare TestTheme ChessBoardSquareWhite"
  >
    <div
      class="Highlight"
    />
    <div
      class="InCheck"
    />
    <img
      alt="Black King"
      class="ChessPiece"
      src="/pieces/cburnett/Black King.svg"
    />
  </div>
</div>
`;

exports[`In check 1`] = `
<div>
  <div
    class="ChessBoardSquare TestTheme ChessBoardSquareWhite"
  >
    <div
      class="InCheck"
    />
    <img
      alt="Black King"
      class="ChessPiece"
      src="/pieces/cburnett/Black King.svg"
    />
  </div>
</div>
`;

exports[`Selected Queen 1`] = `
<div>
  <div
    class="ChessBoardSquare TestTheme ChessBoardSquareWhite"
  >
    <div
      class="Highlight"
    />
    <img
      alt="Black Queen"
      class="ChessPiece"
      src="/pieces/cburnett/Black Queen.svg"
    />
  </div>
</div>
`;

exports[`White Pawn 1`] = `
<div>
  <div
    class="ChessBoardSquare TestTheme ChessBoardSquareWhite"
  >
    <img
      alt="White Pawn"
      class="ChessPiece"
      src="/pieces/cburnett/White Pawn.svg"
    />
  </div>
</div>
`;
